Fig 8: change of colors in the text

--- a/main.tex
+++ b/main.tex
@@ -267,7 +267,7 @@ With these three developmental rules at play, we exposed the model to patterned 
 Model results. Each plot shows how one network measure changed as the model developed. Lines of different colors represent different model types: red is for the default model; other colors show sensitivity analyses. See the text for details.}
 \end{figure*}
 
-The \textbf{summary of modeling results} is shown in Figure 8 (red line in each plot for the base model). In development, the network became selective for Looming stimuli, both in terms of total response (by the end of development it responded to Looming 99$\pm$9\% stronger than to Flash; Figure 8A) and average selectivity (mean Cohen $d$ of responses across all cells = 1.09$\pm$0.10; Figure 8B). The share of cells selective for Looming stimuli also increased (Figure 8C), and then saturated at $\sim$98\% level, as did the selectivity of the top 10\% of most selective cells (Figure 8D).
+The \textbf{summary of modeling results} is shown in Figure 8 (black line in each plot shows base model results). In development, the network became selective for Looming stimuli, both in terms of total response (by the end of development it responded to Looming 99$\pm$9\% stronger than to Flash; Figure 8A) and average selectivity (mean Cohen $d$ of responses across all cells = 1.09$\pm$0.10; Figure 8B). The share of cells selective for Looming stimuli also increased (Figure 8C), and then saturated at $\sim$98\% level, as did the selectivity of the top 10\% of most selective cells (Figure 8D).
 
 We then analyzed the quality of stimulus encoding, or whether in our model the identity of visual stimuli could be reconstructed from network activation. For a dataset consisting of equal shares of Looming and non-looming stimuli, stimulus encoding increased in development, and plateaued at the prediction accuracy level of $\sim$95\% (Figure 8E). The fact that with multivariate logistic regression we could identify looming stimuli in 95\% of cases suggests that a retinotopic STDP-driven network can achieve reliable looming detection, as long as it is equipped with a properly tuned output layer. We assume that in biological tadpoles, the projections from tectal cells to reticulospinal neurons in the hindbrain can serve as this output layer \citep{helmbrecht2018topography}, with its weights tuned in development via reinforcement learning.
 
@@ -295,13 +295,13 @@ To conclude whether predictions of our model matched biological experiments, we 
 
 \subsection*{Sensitivity analysis}
 
-While a comparison with one faithfully constructed model is important, a better approach is to consider a family of models, and see which assumptions are critical for the replication of biological results, and which ones are not essential \citep{linderman2017constrain, pauli2018repro}. For example, we wondered whether it was important to assume that  plasticity was stronger during actual collisions, or whether looming selectivity would develop if instead of looming stimuli we used more general visual stimuli. We also wondered whether structured sensory flow is even necessary for the emergence of selectivity \citep{triplett2018emergence}. To answer these questions, we rerun our model, excluding different parts of it one by one (but not in a cumulative fashion). First we removed explicit synaptic competition, by replacing it with synapsic weight decay (Figure 8, brown lines). In a different set of simulations we greatly decreased the amount of intrinsic plasticity present in the system (Figure 8, green lines), and in yet another set we replaced STDP with simple symmetrical Hebbian plasticity (Figure 8, teal lines). Finally, in last two series of simulations, we let the model develop either while exposed to random visual noise (Figure 8, blue), or a randomized mix of translating, receding, and oblique looming stimuli (Figure 8, pink).
+While a comparison with one faithfully constructed model is important, a better approach is to consider a family of models, and see which assumptions are critical for the replication of biological results, and which ones are not essential \citep{linderman2017constrain, pauli2018repro}. For example, we wondered whether it was important to assume that  plasticity was stronger during actual collisions, or whether looming selectivity would develop if instead of looming stimuli we used more general visual stimuli. We also wondered whether structured sensory flow is even necessary for the emergence of selectivity \citep{triplett2018emergence}. To answer these questions, we rerun our model, excluding different parts of it one by one (but not in a cumulative fashion). First we removed explicit synaptic competition, by replacing it with synapsic weight decay (Figure 8, red lines). In a different set of simulations we greatly decreased the amount of intrinsic plasticity present in the system (Figure 8, green lines), and in yet another set we replaced STDP with simple symmetrical Hebbian plasticity (Figure 8, blue lines). Finally, in last two series of simulations, we let the model develop either while exposed to random visual noise (Figure 8, pink dashed line), or a randomized mix of translating, receding, and oblique looming stimuli (Figure 8, gray dashed line).
 
-We found that training on looming stimuli was not critical (in terms of replicating predictions of a full model), but training on structured stimuli was. When looming stimuli were replaced by non-colliding visual stimuli (Table 1, column "Visual"), almost all network parameters still developed similarly to how they did in the base model. Looming selectivity showed a similar trajectory, except that it reached 20-50\% lower selectivity values (pink lines follow red lines in Figure 8A-J). In contrast, when patterned stimuli were replaced with uncorrelated noise (Table 1, column "Noise"), selectivity did not improve with time (blue lines are flat and low in Figure 8A-J), even though network topology still changed in development (Figure 8W-Z).
+We found that training on looming stimuli was not critical (in terms of replicating predictions of a full model), but training on structured stimuli was. When looming stimuli were replaced by non-colliding visual stimuli (Table 1, column "Visual"), almost all network parameters still developed similarly to how they did in the base model. Looming selectivity showed a similar trajectory, except that it reached 20-50\% lower selectivity values (gray dashed lines roughly follow black lines in Figure 8A-J). In contrast, when patterned stimuli were replaced with uncorrelated noise (Table 1, column "Noise"), selectivity did not improve with time (dashed pink lines are flat in Figure 8A-J), even though network topology still changed in development (Figure 8W-Z).
 
-Disruption of individual developmental rules led to very different changes in network properties, and their trajectories. When STDP was replaced by simple Hebbian plasticity (Table 1, column "No STDP"; teal lines in Figure 8), looming selectivity was similar or better than with STDP (top lines in Figure8A,B,F,G), and the network generally developed similarly, except that modularity was higher (Figure 8X), and neuronal ensembles were more strongly interconnected (Figure 8S). 
+Disruption of individual developmental rules led to very different changes in network properties, and their trajectories. When STDP was replaced by simple Hebbian plasticity (Table 1, column "No STDP"; blue lines in Figure 8), looming selectivity was similar or better than with STDP (top lines in Figure8A,B,F,G), and the network generally developed similarly, except that modularity was higher (Figure 8X), and neuronal ensembles were more strongly interconnected (Figure 8S). 
 
-When synaptic competition was replaced with synaptic strength decay (Table 1, column "No Syn. Comp."), the degree distribution was very different (got flatter rather than sharper; Figure 8U, brown lines); selectivity for looming stimuli was weakened (Figure 8C); the pattern of interactions between selectivity and node centrality became unlike what was observed in the base series of experiments (Figure 8M-O), and the network became strongly hierarchical (Figure 8Z). The main reason for these differences appears to be that without synaptic competition, chains of connected neurons were allowed to lead to "dead-ends" within the graph, while with competition the total output of each neuron remained constant, leading to the development of cycles. 
+When synaptic competition was replaced with synaptic strength decay (Table 1, column "No Syn. Comp."), the degree distribution was very different (got flatter rather than sharper; Figure 8U, red lines); selectivity for looming stimuli was weakened (Figure 8C); the pattern of interactions between selectivity and node centrality became unlike what was observed in the base series of experiments (Figure 8M-O), and the network became strongly hierarchical (Figure 8Z). The main reason for these differences appears to be that without synaptic competition, chains of connected neurons were allowed to lead to "dead-ends" within the graph, while with competition the total output of each neuron remained constant, leading to the development of cycles. 
 
 Finally, when intrinsic plasticity was weakened (Table 1, column "No Intrinsic"; Figure 8, green lines), looming detection did not emerge (green in Figure 8A-C,F-H), and networks had simpler response structure, both in terms of PCA results (Figure 8Q), and ensemble analysis (Figure 8R). This shows that agile intrinsic plasticity is critical for learning; without it the interaction between neuronal activity and network connectivity is disrupted, as the network cannot process sensory stimuli, yet is prone to spontaneous activity.
 
