Intro: ending optimized

--- a/main.tex
+++ b/main.tex
@@ -113,17 +113,17 @@ Looming stimuli evoke behavioral responses in most sighted animals, yet the mech
 
 % Create tension. Build value. Why are you reading this? What is the point? How will reading this benefit the community you belong to, or you personally? Instability (tension). Don't describe the status quo; don't build a foundation, describe the problem. Invest in tension (use: but, however, although, despite, paradox, inconsistency, unexpected, surprising, contradiction). Why does it matter? Gap in knowledge is good, but really we only care about problems that cost something.
 
-Few sensory stimuli are as ill boding for the animal as a visual loom. A retinal projection that is small at first, but quickly grows in size, may promise a painful collision, or meeting with a predator, and so it inherently calls for action: an avoidance maneuver, or defensive posturing, such as a blink. Moreover, to be meaningful, looming detection has to be fast. Not surprisingly, it is described in virtually every animal that uses vision, from insects to primates \citep{Pereira2016}. And yet, while our understanding of looming detection in insects has recently improved \citep{rind2016locust,von2017fruitfly}, the mechanisms that underlie collision avoidance in vertebrates are still unclear.
+Few sensory stimuli are as ill boding for the animal as a visual loom. A retinal projection that is small at first, but quickly grows in size, may promise a painful collision, or a meeting with a predator, and so it inherently calls for action: an avoidance maneuver, defensive posturing, or a blink. Moreover, to be meaningful, looming detection has to be fast. Not surprisingly, it is described in virtually every animal that uses vision, from insects to primates \citep{Pereira2016}. And yet, while our understanding of looming detection in insects has recently improved \citep{rind2016locust,von2017fruitfly}, the mechanisms that underlie collision avoidance in vertebrates are still unclear.
 
 For vertebrates, it is well established that looming detection primarily happens in a midbrain region known as superior colliculus in mammals, and optic tectum in all other clades \citep{frost2004review, liu2011cat, khakhalin2014, dunn2016escapesZF}. It is not known however how midbrain circuits actually perform the computations required for collision avoidance. It is also not clear whether looming detection and collision avoidance in vertebrates are innate (and so possibly hardwired), or whether they need to be learned. Finally, to navigate, animals need to calculate not just \textit{whether} a collision is about to happen, but also \textit{where} a looming stimulus is coming from. While it is known that the tectum harbors a retinotopic map of the visual field \citep{mclaughlin2003retinotopic, ruthazer2004map}, there are several competing theories about how looming detectors may be distributed within this map \citep{frost2004review}.
 
-What type of calculation may in principle underlie collision avoidance? Across species, looming detection relies on a diverse set of principles that include dimming detectors \citep{ishikane2005, munch2009}, integration of opponent motion \citep{klapoetke2017looming}, and competitive spike-frequency adaptation \citep{peron2009adaptation, fotowat2011multiplexing}. Even within a single clade of anuran amphibians (frogs), animals seem to employ at least two competing mechanisms to detect looms: a non-linear response to dimming-induced retinal oscillations \citep{baranauskas2012}, and a rebound of recurrent activity during edge expansion \citep{khakhalin2014, jang2016}. Moreover, at least in some cases, competing mechanisms lead to different motor responses, as described in insects \citep{card2008tradeoffs, chan2013avoidance}, fish \citep{budick2000repertoire, burgess2007twoescapes, portugues2009behaviors, temizer2015pathway, bhattacharyya2017assessment}, and tadpoles \citep{khakhalin2014}.
+What type of calculations may in principle underlie collision avoidance? Across species, looming detection relies on a diverse set of principles that include dimming detectors \citep{ishikane2005, munch2009}, integration of opponent motion \citep{klapoetke2017looming}, and competitive spike-frequency adaptation \citep{peron2009adaptation, fotowat2011multiplexing}. Even within a single clade of anuran amphibians (frogs), animals seem to employ at least two competing mechanisms to detect looms: a non-linear response to dimming-induced retinal oscillations \citep{baranauskas2012}, and a rebound of recurrent activity during edge expansion \citep{khakhalin2014, jang2016}. Moreover, at least in some cases, competing mechanisms may lead to different motor responses, as described in insects \citep{card2008tradeoffs, chan2013avoidance}, fish \citep{budick2000repertoire, burgess2007twoescapes, portugues2009behaviors, temizer2015pathway, bhattacharyya2017assessment}, and tadpoles \citep{khakhalin2014}.
 
 It may seem puzzling that the brain would use several conflicting approaches to solve one practical problem, but this arrangement may make sense developmentally. Simple, crude ways of identifying dangerous stimuli can be used to train more sophisticated and efficient networks, capable of nuanced sensory analysis at later stages of development \citep{marblestone2016deeplearning}. We argue that young aquatic animals may use "hardwired" dimming receptors \citep{baranauskas2012} both to avoid collisions early in development \citep{dong2009}, and to "bootstrap" motion-dependent networks in the tectum. Later in development, nuanced motion-detecting networks could serve as a first line of defense, identifying early phases of looming, and allowing for fine course corrections \citep{khakhalin2014, bhattacharyya2017assessment}, while dimming detectors remain as a backup, mediating last-moment, less coordinated responses. Moreover, every time collision avoidance is not performed perfectly, sensorimotor networks can be refined, based on mechanosensory inputs from the lateral line and from the skin \citep{felch2016, helmbrecht2018topography}.
 
 In this paper, we use high-speed calcium imaging and functional connectivity reconstruction to search for looming detectors within recurrent networks in the developing tectum of \textit{Xenopus} tadpoles. Tadpole tectum is uniquely suitable for studies of sensory integration, as it is excessively plastic \citep{pratt2007intrinsic, busch2019}, strongly interconnected \citep{james2015}, and develops reliable looming selectivity within about a week \citep{dong2009, khakhalin2014}, as tadpoles mature from Nieuwkoop stage 46 to stage 49. We hypothesize that looming detectors may emerge in development, as connections between tectal cells are reshaped by patterned visual stimulation. Synapses in the tectum of young tadpoles exhibit spike-time-dependent plasticity (STDP; \citealt{zhang1998stdp, mu2006stdp, vislay2006rf, richards2010stdp}) that is known to promote the development of synfire chains: groups of neurons, sequentially connected to one another \citep{fiete2010chains, zheng2014synfire}. Synfire chains are selective for inputs that activate neurons in the same sequence in which they are connected \citep{clopath2010stdpcoding}, turning them into temporal pattern detectors, and it is easy to see how this property can be useful for looming detection. 
 
-There are two potential ways to test this hypothesis. First, we can look for synfire chains in the tectum, and see whether they get selectively activated in response to looming stimuli. Luckily, both the synaptic transmission and spiking in \textit{Xenopus} tectal neurons are relatively slow \citep{ciarleglio2015, jang2016, busch2019}, with transmission from one neuron to another taking up to 10 ms, so if synfire chains in the tectum exist, they may be directly observable with fast calcium imaging, operating at rates of $\sim$100 frames/s. If this approach works, and our hypothesis is true, we can expect both looming selectivity of individual cells, and statistical properties of tectal networks to change in development. Second, if synfire chains can serve as a basis for looming detection, we can expect looming selectivity to spontaneously emerge in a model of a developing tectum \citep{gao2015simplicity, pietri2017emergence}. We can then use this model to build verifiable predictions about looming detectors in the tectum, and explore the range of developmental rules that enable looming selectivity \citep{linderman2017constrain, bassett2018models}, similar to how computational models recently helped to study the emergence of receptive fields \citep{bashivan2018neural}, grid cells \citep{banino2018grid}, and decision circuits \citep{haesemeyer2018convergent}. 
+There are two potential ways to test this hypothesis. First, we can look for synfire chains in the tectum, to see whether they get selectively activated in response to looming stimuli, and whether their connectivity and selectivity patterns change with development. Luckily, signal transmission in \textit{Xenopus} tectal neurons are relatively slow, with synaptic transmission and spiking initiation taking up to 10 ms \citep{ciarleglio2015, jang2016, busch2019}, so if synfire chains in the tectum exist, they may be directly observable with fast calcium imaging, operating at rates of $\sim$100 frames/s. Second, if synfire chains can serve as a basis for looming detection, we can expect looming selectivity to spontaneously emerge in a model of a developing tectum \citep{gao2015simplicity, pietri2017emergence}. We can then use this model to build verifiable predictions about looming detectors in the tectum, and explore the range of developmental rules that enable looming selectivity \citep{linderman2017constrain, bassett2018models}, similar to how computational models recently helped to study the emergence of receptive fields \citep{bashivan2018neural}, grid cells \citep{banino2018grid}, and decision circuits \citep{haesemeyer2018convergent}. 
 
 With this in mind, here we ask three specific questions. We test whether it is possible to reconstruct functional connectivity in tectal networks from calcium imaging recordings. Then, we investigate whether the topology of reconstructed connectivity graphs in tadpoles may support collision detection, and whether there are differences in selectivity and network topology between developmental stages. Finally, we check whether looming detection emerges during reinforcement learning in a computational model, and whether the statistics of simulated looming-selective networks matches the statistics of biological networks. We show that our model predicted some, but not all aspects of topology and functionality of looming-sensitive networks, making it hard to draw simple conclusions. Nevertheless, we report several new findings, including some surprising positive and negative results.
 
