Before trying to quantify synfire chains

--- a/refs.bib
+++ b/refs.bib
@@ -1428,3 +1428,12 @@
   year={2019},
   publisher={Cold Spring Harbor Laboratory}
 }
+
+@article {zador2019critique,
+	author = {Zador, Anthony},
+	title = {A Critique of Pure Learning: What Artificial Neural Networks can Learn from Animal Brains},
+	year = {2019},
+	doi = {10.1101/582643},
+	publisher = {Cold Spring Harbor Laboratory},
+	journal = {bioRxiv}
+}
