Pre-release version

--- a/table1.tex
+++ b/table1.tex
@@ -23,14 +23,14 @@
 \begin{turn}{90}\text{Noise}\end{turn}
 \\
 \hline
-Brain FL selectivity & \checkmark & \checkmark & \checkmark & \checkmark & \times & \checkmark & \checkmark \\
+Full brain FL selectivity & \checkmark & \checkmark & \checkmark & \checkmark & \times & \checkmark & \checkmark \\
 Brain selectivity, change & =	& \land	\lor	& 	\land \lor	& \land & = & \land & =\\
 Av. FL selectivity & \text{0.6} & \text{0.8} & \text{1.0} & \text{0.6} & -\text{7.0} & \text{0.8} & \text{0.5} \\
 Av. FL selectivity, change & = & \land & \land \lor & \land & \lor \land & \land & = \\
 \% FL select. cells & \text{80\%} & \text{98\%} & \text{95\%} & \text{75\%} & \text{0\%} & \text{95\%} & \text{95\%}\\
 \% FL select. cells, change & = & \land & \land & \land \lor & = & \land & \land\\
 \hline
-Brain SL selectivity & \times & \times & \times & \times & \times & \times & \times  \\
+Full brain SL selectivity & \times & \checkmark & \checkmark & \checkmark & \times & \checkmark & \times  \\
 Av. SL selectivity & -\text{0.1} & \text{0.5} & \text{0.7} & \text{0.5} & -\text{0.5} & \text{0.2} & \text{0}\\
 Av. SL selectivity, change & = & \land & \land \lor & \land & \lor & \land & = \\
 \% SL select. cells & \text{50\%} & \text{80\%} & \text{90\%} & \text{70\%} & \text{20\%} & \text{70\%} & \text{50\%} \\
