Pre-final version (results fully re-read)

--- a/refs.bib
+++ b/refs.bib
@@ -22,7 +22,7 @@
 }
 
 @article{sakaguchi1985refinement,
-  title={Map formation in the developing Xenopus retinotectal system: an examination of ganglion cell terminal arborizations},
+  title={Map formation in the developing {Xenopus} retinotectal system: an examination of ganglion cell terminal arborizations},
   author={Sakaguchi, DS and Murphey, RK},
   journal={Journal of Neuroscience},
   volume={5},
@@ -44,7 +44,7 @@
 }
 
 @book{nieuwkoop1994,
-  title={Normal table of Xenopus laevis (Daudin): A Systematical and Chronological Survey of the Development from the Fertilized Egg till the end of Metamorphosis.},
+  title={Normal table of {Xenopus} laevis ({Daudin}): A Systematical and Chronological Survey of the Development from the Fertilized Egg till the end of Metamorphosis.},
   author={Nieuwkoop, Pieter D and Faber, Jacob},
   year={1994}
 }
@@ -83,14 +83,14 @@
 }
 
 @techreport{page1999pagerank,
-  title={The PageRank citation ranking: Bringing order to the web.},
+  title={The {PageRank} citation ranking: Bringing order to the web},
   author={Page, Lawrence and Brin, Sergey and Motwani, Rajeev and Winograd, Terry},
   year={1999},
   institution={Stanford InfoLab}
 }
 
 @article{budick2000repertoire,
-  title={Locomotor repertoire of the larval zebrafish: swimming, turning and prey capture},
+  title={Locomotor repertoire of the larval {Zebrafish}: swimming, turning and prey capture},
   author={Budick, Seth A and O'Malley, DONALD M},
   journal={Journal of Experimental Biology},
   volume={203},
@@ -240,7 +240,7 @@
 }
 
 @article{korn2005mauthner,
-  title={The Mauthner cell half a century later: a neurobiological model for decision-making?},
+  title={The {Mauthner} cell half a century later: a neurobiological model for decision-making?},
   author={Korn, Henri and Faber, Donald S},
   journal={Neuron},
   volume={47},
@@ -284,7 +284,7 @@
 }
 
 @article{akerman2006,
-  title={Depolarizing GABAergic conductances regulate the balance of excitation to inhibition in the developing retinotectal circuit in vivo},
+  title={Depolarizing {GABAergic} conductances regulate the balance of excitation to inhibition in the developing retinotectal circuit in vivo},
   author={Akerman, Colin J and Cline, Hollis T},
   journal={Journal of Neuroscience},
   volume={26},
@@ -295,7 +295,7 @@
 }
 
 @article{mu2006stdp,
-  title={Spike timing-dependent LTP/LTD mediates visual experience-dependent plasticity in a developing retinotectal system},
+  title={Spike timing-dependent {LTP/LTD} mediates visual experience-dependent plasticity in a developing retinotectal system},
   author={Mu, Yangling and Poo, Mu-ming},
   journal={Neuron},
   volume={50},
@@ -350,7 +350,7 @@
 }
 
 @article{burgess2007twoescapes,
-  title={Modulation of locomotor activity in larval zebrafish during light adaptation},
+  title={Modulation of locomotor activity in larval {Zebrafish} during light adaptation},
   author={Burgess, Harold A and Granato, Michael},
   journal={Journal of Experimental Biology},
   volume={210},
@@ -394,7 +394,7 @@
 }
 
 @article{kleiner2007psychtoolbox,
-  title={What’s new in Psychtoolbox-3},
+  title={What’s new in {Psychtoolbox-3}},
   author={Kleiner, Mario and Brainard, David and Pelli, Denis and Ingling, Allen and Murray, Richard and Broussard, Christopher and others},
   journal={Perception},
   volume={36},
@@ -449,7 +449,7 @@
 }
 
 @article{card2008tradeoffs,
-  title={Performance trade-offs in the flight initiation of Drosophila},
+  title={Performance trade-offs in the flight initiation of {Drosophila}},
   author={Card, Gwyneth and Dickinson, Michael},
   journal={Journal of Experimental Biology},
   volume={211},
@@ -492,7 +492,7 @@
 }
 
 @article{pratt2008recurrent,
-  title={Development and spike timing--dependent plasticity of recurrent excitation in the Xenopus optic tectum},
+  title={Development and spike timing-dependent plasticity of recurrent excitation in the {Xenopus} optic tectum},
   author={Pratt, Kara G and Dong, Wei and Aizenman, Carlos D},
   journal={Nature neuroscience},
   volume={11},
@@ -503,7 +503,7 @@
 }
 
 @article{baginskas2009recurrent,
-  title={L-Type Ca 2+ current in frog tectal recurrent neurons determines the NMDA receptor activation on efferent neuron},
+  title={{L-Type Ca} 2+ current in frog tectal recurrent neurons determines the {NMDA} receptor activation on efferent neuron},
   author={Baginskas, Armantas and Kuras, Antanas},
   journal={Experimental brain research},
   volume={193},
@@ -525,7 +525,7 @@
 }
 
 @article{deeg2009,
-  title={Development of multisensory convergence in the Xenopus optic tectum},
+  title={Development of multisensory convergence in the {Xenopus} optic tectum},
   author={Deeg, Katherine E and Sears, Irina B and Aizenman, Carlos D},
   journal={Journal of Neurophysiology},
   volume={102},
@@ -536,7 +536,7 @@
 }
 
 @article{dong2009,
-  title={Visual avoidance in Xenopus tadpoles is correlated with the maturation of visual responses in the optic tectum},
+  title={Visual avoidance in {Xenopus} tadpoles is correlated with the maturation of visual responses in the optic tectum},
   author={Dong, Wei and Lee, Ryan H and Xu, Heng and Yang, Shelley and Pratt, Kara G and Cao, Vania and Song, Yoon-Kyu and Nurmikko, Arto and Aizenman, Carlos D},
   journal={Journal of neurophysiology},
   volume={101},
@@ -558,7 +558,7 @@
 }
 
 @article{hiramoto2009,
-  title={Convergence of multisensory inputs in Xenopus tadpole tectum},
+  title={Convergence of multisensory inputs in {Xenopus} tadpole tectum},
   author={Hiramoto, Masaki and Cline, Hollis T},
   journal={Developmental neurobiology},
   volume={69},
@@ -591,7 +591,7 @@
 }
 
 @article{portugues2009behaviors,
-  title={The neural basis of visual behaviors in the larval zebrafish},
+  title={The neural basis of visual behaviors in the larval {Zebrafish}},
   author={Portugues, Ruben and Engert, Florian},
   journal={Current opinion in neurobiology},
   volume={19},
@@ -602,7 +602,7 @@
 }
 
 @article{pratt2009multisens,
-  title={Multisensory integration in mesencephalic trigeminal neurons in Xenopus tadpoles},
+  title={Multisensory integration in mesencephalic trigeminal neurons in {Xenopus} tadpoles},
   author={Pratt, Kara G and Aizenman, Carlos D},
   journal={Journal of neurophysiology},
   volume={102},
@@ -657,7 +657,7 @@
 }
 
 @article{richards2010stdp,
-  title={In vivo spike-timing-dependent plasticity in the optic tectum of Xenopus laevis},
+  title={In vivo spike-timing-dependent plasticity in the optic tectum of {Xenopus} laevis},
   author={Richards, Blake A and Aizenman, Carlos D and Akerman, Colin J},
   journal={Frontiers in synaptic neuroscience},
   volume={2},
@@ -719,7 +719,7 @@
 }
 
 @article{bell2011polyamines,
-  title={A neuroprotective role for polyamines in a Xenopus tadpole model of epilepsy},
+  title={A neuroprotective role for polyamines in a {Xenopus} tadpole model of epilepsy},
   author={Bell, Mark R and Belarde, James A and Johnson, Hannah F and Aizenman, Carlos D},
   journal={Nature neuroscience},
   volume={14},
@@ -869,7 +869,7 @@
 }
 
 @article{khakhalin2012,
-  title={GABAergic transmission and chloride equilibrium potential are not modulated by pyruvate in the developing optic tectum of Xenopus laevis tadpoles},
+  title={{GABAergic} transmission and chloride equilibrium potential are not modulated by pyruvate in the developing optic tectum of {Xenopus} laevis tadpoles},
   author={Khakhalin, Arseny S and Aizenman, Carlos D},
   journal={PLoS One},
   volume={7},
@@ -913,7 +913,7 @@
 }
 
 @article{pratt2013review,
-  title={Modeling human neurodevelopmental disorders in the Xenopus tadpole: from mechanisms to therapeutic targets},
+  title={Modeling human neurodevelopmental disorders in the {Xenopus} tadpole: from mechanisms to therapeutic targets},
   author={Pratt, Kara G and Khakhalin, Arseny S},
   journal={Disease models \& mechanisms},
   pages={dmm--012138},
@@ -932,7 +932,7 @@
 }
 
 @article{hamodi2014,
-  title={Region-specific regulation of voltage-gated intrinsic currents in the developing optic tectum of the Xenopus tadpole},
+  title={Region-specific regulation of voltage-gated intrinsic currents in the developing optic tectum of the {Xenopus} tadpole},
   author={Hamodi, Ali S and Pratt, Kara G},
   journal={Journal of neurophysiology},
   volume={112},
@@ -1028,7 +1028,7 @@
 }
 
 @article{aswolinskiy2015stdpreward,
-  title={RM-SORN: a reward-modulated self-organizing recurrent neural network},
+  title={{RM-SORN}: a reward-modulated self-organizing recurrent neural network},
   author={Aswolinskiy, Witali and Pipa, Gordon},
   journal={Frontiers in computational neuroscience},
   volume={9},
@@ -1038,7 +1038,7 @@
 }
 
 @article{ciarleglio2015,
-  title={Multivariate analysis of electrophysiological diversity of Xenopus visual neurons during development and plasticity},
+  title={Multivariate analysis of electrophysiological diversity of {Xenopus} visual neurons during development and plasticity},
   author={Ciarleglio, Christopher M and Khakhalin, Arseny S and Wang, Angelia F and Constantino, Alexander C and Yip, Sarah P and Aizenman, Carlos D},
   journal={Elife},
   volume={4},
@@ -1067,7 +1067,7 @@
 }
 
 @article{james2015,
-  title={Valproate-induced neurodevelopmental deficits in Xenopus laevis tadpoles},
+  title={Valproate-induced neurodevelopmental deficits in {Xenopus} laevis tadpoles},
   author={James, Eric J and Gu, Jenny and Ramirez-Vizcarrondo, Carolina M and Hasan, Mashfiq and Truszkowski, Torrey LS and Tan, Yuqi and Oupravanh, Phouangmaly M and Khakhalin, Arseny S and Aizenman, Carlos D},
   journal={Journal of Neuroscience},
   volume={35},
@@ -1078,7 +1078,7 @@
 }
 
 @article{temizer2015pathway,
-  title={A visual pathway for looming-evoked escape in larval zebrafish},
+  title={A visual pathway for looming-evoked escape in larval {Zebrafish}},
   author={Temizer, Incinur and Donovan, Joseph C and Baier, Herwig and Semmelhack, Julia L},
   journal={Current Biology},
   volume={25},
@@ -1100,7 +1100,7 @@
 }
 
 @article{dunn2016escapesZF,
-  title={Neural circuits underlying visually evoked escapes in larval zebrafish},
+  title={Neural circuits underlying visually evoked escapes in larval {Zebrafish}},
   author={Dunn, Timothy W and Gebhardt, Christoph and Naumann, Eva A and Riegler, Clemens and Ahrens, Misha B and Engert, Florian and Del Bene, Filippo},
   journal={Neuron},
   volume={89},
@@ -1131,7 +1131,7 @@
 }
 
 @article{hamodi2016nmda,
-  title={An NMDA receptor-dependent mechanism for subcellular segregation of sensory inputs in the tadpole optic tectum},
+  title={An {NMDA} receptor-dependent mechanism for subcellular segregation of sensory inputs in the tadpole optic tectum},
   author={Hamodi, Ali S and Liu, Zhenyu and Pratt, Kara G},
   journal={eLife},
   volume={5},
@@ -1201,7 +1201,7 @@
 }
 
 @article{thompson2016ensembles,
-  title={Functional profiles of visual-, auditory-, and water flow-responsive neurons in the zebrafish tectum},
+  title={Functional profiles of visual-, auditory-, and water flow-responsive neurons in the {Zebrafish} tectum},
   author={Thompson, Andrew W and Vanwalleghem, Gilles C and Heap, Lucy A and Scott, Ethan K},
   journal={Current Biology},
   volume={26},
@@ -1223,7 +1223,7 @@
 }
 
 @article{avitan2017spontaneous,
-  title={Spontaneous activity in the zebrafish tectum reorganizes over development and is influenced by visual experience},
+  title={Spontaneous activity in the {Zebrafish} tectum reorganizes over development and is influenced by visual experience},
   author={Avitan, Lilach and Pujic, Zac and M{\"o}lter, Jan and Van De Poll, Matthew and Sun, Biao and Teng, Haotian and Amor, Rumelo and Scott, Ethan K and Goodhill, Geoffrey J},
   journal={Current Biology},
   volume={27},
@@ -1234,7 +1234,7 @@
 }
 
 @article{bhattacharyya2017assessment,
-  title={Visual threat assessment and reticulospinal encoding of calibrated responses in larval zebrafish},
+  title={Visual threat assessment and reticulospinal encoding of calibrated responses in larval {Zebrafish}},
   author={Bhattacharyya, Kiran and McLean, David L and MacIver, Malcolm A},
   journal={Current Biology},
   volume={27},
@@ -1318,7 +1318,7 @@
 }
 
 @article{zenke2017temporal,
-  title={The temporal paradox of Hebbian learning and homeostatic plasticity},
+  title={The temporal paradox of {Hebbian} learning and homeostatic plasticity},
   author={Zenke, Friedemann and Gerstner, Wulfram and Ganguli, Surya},
   journal={Current opinion in neurobiology},
   volume={43},
@@ -1427,6 +1427,15 @@
   pages={540898},
   year={2019},
   publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{amrhein2019pval,
+  title={Scientists rise up against statistical significance},
+  author={Amrhein, Valentin and Greenland, Sander and McShane, Blake},
+  journal={Nature},
+  volume={567},
+  pages={305-307},
+  year={2019}
 }
 
 @article {zador2019critique,
